// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default cases const isSameUrl = 'https://example.com' === 'https://demo.com';: const isSameUrl = atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==") === atob("aHR0cHM6Ly9kZW1vLmNvbQ=="); 1`] = `"const isSameUrl = atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==") === atob("aHR0cHM6Ly9kZW1vLmNvbQ==");"`;

exports[`Default cases const url = 'https://example.com' 1`] = `"const url = atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==");"`;

exports[`Default cases const urlObj = {a: '//example.com'} with urls option 1`] = `
"const urlObj = {
  a: atob("Ly9leGFtcGxlLmNvbQ==")
};"
`;

exports[`Default cases const urlObj = {a: 'https://example.com'} 1`] = `
"const urlObj = {
  a: atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==")
};"
`;

exports[`Default cases const urlObj = true ? 'https://example.com' : 'https://demo.com': const urlObj = true ? atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==") : atob("aHR0cHM6Ly9kZW1vLmNvbQ=="); 1`] = `"const urlObj = true ? atob("aHR0cHM6Ly9leGFtcGxlLmNvbQ==") : atob("aHR0cHM6Ly9kZW1vLmNvbQ==");"`;
